LUCENE-1903: Fix incorrect ShingleFilter behavior when outputUnigrams == false
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/trunk@812779 13f79535-47bb-0310-9956-ffa450edef68